# ray-tracer

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Engine/: Engine.cpp  Engine.h  Scenario.cpp  Scenario.h
src/Geometry/: Geometry.h  Primitives.h
src/Misc/: Misc.cpp  Misc.h
